# luise-api

./: .env.example  .gitignore  Dockerfile  Dockerfile.mcp  EMAIL_SETUP.md  Procfile  README.md  claude-desktop-config.json  mcp_server.py  package.json  pyproject.toml  railway.toml  requirements.txt  start.py  streamlit_agent.py  test_mcp.py
.github/: copilot-instructions.md
.github/workflows/: release.yml
app/: __init__.py  config.py  main.py
app/api/: __init__.py
app/api/routers/: __init__.py  debug.py  profile.py  projects.py  skills.py  talks.py
app/data/: profile.json  projects.json  questions.json  quotes.json  skills.json  talks.json
app/models/: __init__.py
app/services/: __init__.py
app/static/: swagger-custom.css
tests/: __init__.py  test_api.py
